syntax = "proto3";

package farmera.common;

option go_package = "github.com/farmera/grpc-protos/common";

// User roles across the system
enum UserRole {
  USER_ROLE_UNSPECIFIED = 0;
  USER_ROLE_BUYER = 1;
  USER_ROLE_FARMER = 2;
  USER_ROLE_ADMIN = 3;
}

// User account status
enum UserStatus {
  USER_STATUS_UNSPECIFIED = 0;
  USER_STATUS_ACTIVE = 1;
  USER_STATUS_INACTIVE = 2;
  USER_STATUS_BANNED = 3;
  USER_STATUS_PENDING_VERIFICATION = 4;
  USER_STATUS_SUSPENDED = 5;
}

// Product status lifecycle
enum ProductStatus {
  PRODUCT_STATUS_UNSPECIFIED = 0;
  PRODUCT_STATUS_PRE_ORDER = 1;
  PRODUCT_STATUS_NOT_YET_OPEN = 2;
  PRODUCT_STATUS_OPEN_FOR_SALE = 3;
  PRODUCT_STATUS_SOLD_OUT = 4;
  PRODUCT_STATUS_CLOSED = 5;
  PRODUCT_STATUS_DELETED = 6;
}
// Farm status
enum FarmStatus {
  FARM_STATUS_UNSPECIFIED = 0; 
  FARM_STATUS_PENDING = 1;  
  FARM_STATUS_VERIFIED = 2;             
  FARM_STATUS_APPROVED = 3;
  FARM_STATUS_BLOCKED = 4;
  FARM_STATUS_REJECTED = 5;
}
// Order status lifecycle
enum SubOrderStatus {
  SUB_ORDER_STATUS_UNSPECIFIED = 0;
  SUB_ORDER_STATUS_PENDING = 1;
  SUB_ORDER_STATUS_CONFIRMED = 2;
  SUB_ORDER_STATUS_PROCESSING = 3;
  SUB_ORDER_STATUS_SHIPPED = 4;
  SUB_ORDER_STATUS_DELIVERED = 5;
  SUB_ORDER_STATUS_CANCELED = 6;
  SUB_ORDER_STATUS_RETURNED = 7;
  SUB_ORDER_STATUS_FAILED = 8;
  SUB_ORDER_STATUS_PAID = 9;
}

enum OrderStatus {
  ORDER_STATUS_UNSPECIFIED = 0;
  ORDER_STATUS_PENDING = 1;
  ORDER_STATUS_PROCESSING = 2;
  ORDER_STATUS_SHIPPED = 3;
  ORDER_STATUS_DELIVERED = 4;
  ORDER_STATUS_CANCELED = 5;
  ORDER_STATUS_RETURNED = 6;
  ORDER_STATUS_FAILED = 7;
  ORDER_STATUS_PAID = 8;
}

// Payment status
enum PaymentStatus {
  PAYMENT_STATUS_UNSPECIFIED = 0;
  PAYMENT_STATUS_PENDING = 1;
  PAYMENT_STATUS_PROCESSING = 2;
  PAYMENT_STATUS_COMPLETED = 3;
  PAYMENT_STATUS_FAILED = 4;
  PAYMENT_STATUS_CANCELED = 5;
}

// Payment methods
enum PaymentMethod {
  PAYMENT_METHOD_UNSPECIFIED = 0;
  PAYMENT_METHOD_COD = 1;
  PAYMENT_METHOD_PAYOS = 2;
}

enum PaymentProvider {
  PAYMENT_PROVIDER_UNSPECIFIED = 0;
  PAYMENT_PROVIDER_VNPAY = 1;
  PAYMENT_PROVIDER_MOMO = 2;
  PAYMENT_PROVIDER_ZALOPAY = 3;
  PAYMENT_PROVIDER_OTHER = 4;
}

// Delivery status
enum DeliveryStatus {
  DELIVERY_STATUS_UNSPECIFIED = 0;
  DELIVERY_STATUS_PENDING = 1;
  DELIVERY_STATUS_PROCESSING = 2;
  DELIVERY_STATUS_PAID = 3;
  DELIVERY_STATUS_DELIVERED = 4;
  DELIVERY_STATUS_CANCELED= 5;
  DELIVERY_STATUS_RETURNED = 6;
}

// Notification types
enum NotificationType {
    NOTIFICATION_TYPE_UNSPECIFIED = 0;
    TRANSACTIONAL = 1;
    SYSTEM_ALERT = 2;
    CHAT = 3;
}

// Notification delivery channels
enum NotificationChannel {
  CHANNEL_UNSPECIFIED = 0;
  EMAIL = 1;
  PUSH = 2;
}

// Push message types
enum PushMessageType {
    PUSH_MESSAGE_TYPE_UNSPECIFIED = 0;
    TOKEN = 1;
    TOPIC = 2;
    CONDITION = 3;
}

// Gender options
enum Gender {
  GENDER_UNSPECIFIED = 0;
  GENDER_MALE = 1;
  GENDER_FEMALE = 2;
}

// Farm certification types
enum CertificationType {
  CERTIFICATION_TYPE_UNSPECIFIED = 0;
  CERTIFICATION_TYPE_ORGANIC = 1;
  CERTIFICATION_TYPE_FAIRTRADE = 2;
  CERTIFICATION_TYPE_RAINFOREST_ALLIANCE = 3;
  CERTIFICATION_TYPE_GLOBAL_GAP = 4;
  CERTIFICATION_TYPE_LOCAL_SUSTAINABLE = 5;
}

// Product categories (high-level)
enum ProductCategory {
  PRODUCT_CATEGORY_UNSPECIFIED = 0;
  PRODUCT_CATEGORY_VEGETABLES = 1;
  PRODUCT_CATEGORY_FRUITS = 2;
  PRODUCT_CATEGORY_HERBS = 3;
  PRODUCT_CATEGORY_GRAINS = 4;
  PRODUCT_CATEGORY_DAIRY = 5;
  PRODUCT_CATEGORY_MEAT = 6;
  PRODUCT_CATEGORY_SEAFOOD = 7;
  PRODUCT_CATEGORY_PROCESSED = 8;
}

// Discount types
enum DiscountType {
  DISCOUNT_TYPE_UNSPECIFIED = 0;
  DISCOUNT_TYPE_PERCENTAGE = 1;
  DISCOUNT_TYPE_FIXED_AMOUNT = 2;
  DISCOUNT_TYPE_BUY_ONE_GET_ONE = 3;
  DISCOUNT_TYPE_FREE_SHIPPING = 4;
  DISCOUNT_TYPE_BULK_DISCOUNT = 5;
}

// Review status
enum ReviewStatus {
  REVIEW_STATUS_UNSPECIFIED = 0;
  REVIEW_STATUS_PENDING = 1;
  REVIEW_STATUS_APPROVED = 2;
  REVIEW_STATUS_REJECTED = 3;
  REVIEW_STATUS_FLAGGED = 4;
}

// Message types for communication
enum MessageType {
  MESSAGE_TYPE_UNSPECIFIED = 0;
  MESSAGE = 1;
  MEDIA = 2;
}

// Conversation types
enum ConversationType {
  CONVERSATION_TYPE_UNSPECIFIED = 0;
  CONVERSATION_TYPE_DIRECT = 1;
  CONVERSATION_TYPE_GROUP = 2;
  CONVERSATION_TYPE_SUPPORT = 3;
  CONVERSATION_TYPE_BROADCAST = 4;
} 

enum IdentificationStatus {
  IDENTIFICATION_STATUS_UNSPECIFIED = 0;
  IDENTIFICATION_STATUS_PENDING = 1;
  IDENTIFICATION_STATUS_APPROVED = 2;
  IDENTIFICATION_STATUS_REJECTED = 3;
}

enum IdentificationMethod{
  IDENTIFICATION_METHOD_UNSPECIFIED = 0;
  IDENTIFICATION_METHOD_BIOMETRIC = 1;
  IDENTIFICATION_METHOD_ID_CARD = 2;
  IDENTIFICATION_METHOD_PASSPORT = 3;
}

enum VerifyStatusCode {
    STATUS_UNSPECIFIED = 0;
    OK = 1;
    FAILED = 2;
}

enum PaginationOrder {
  ORDER_UNSPECIFIED = 0;
  DESC = 1;
  ASC = 2;
}

enum ProcessStage {
  PROCESS_STAGE_UNSPECIFIED = 0;
  PROCESS_STAGE_START = 1;
  PROCESS_STAGE_PRODUCTION = 2;
  PROCESS_STAGE_COMPLETION = 3;
}

enum UpdateProductQuantityOperation {
  UPDATE_QUANTITY_STATUS_UNSPECIFIED = 0;
  INCREASE = 1;
  DECREASE = 2;
}

enum AssignmentStatus {
  ASSIGNMENT_UNSPECIFIED = 0;
  ASSIGNMENT_UNACTIVATED = 1;
  ASSIGNMENT_ACTIVE = 2;
  ASSIGNMENT_COMPLETED = 3;
  ASSIGNMENT_CANCELLED = 4;
}

// Step Diary messages
enum DiaryCompletionStatus {
  COMPLETION_STATUS_UNSPECIFIED = 0;
  IN_PROGRESS = 1;
  COMPLETED = 2;
  SKIPPED = 3;
}
